tests/paczka1/fuzzy1/76891740.err
Error in line 1: pkUyO S783 92,7
Error in line 5: VaMd1mmArTZ A801 95,0
Error in line 11: UgEy4wHtvG A132 51,7
Error in line 17: NiuubsasPds A132 35,1
Error in line 16: Qkn7 S783 62,4
Error in line 21: pkUyO A221 76,8
Error in line 22: NiuubsasPds A801 80,3
Error in line 24: UgEy4wHtvG A801 10,8
